# libballistics

./: .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libtool
src/: Makefile  Makefile.in  auto-config.h  auto-config.h.in
src/.deps/: angle.Plo  atmosphere.Plo  retardation.Plo  retrieve.Plo  solve.Plo  windage.Plo  zero.Plo
tools/: .gitignore  Makefile.am  example.c
